test/mips/error/compiler/test_mips_error_compiler_016.out


Error: Unterminated string literal
   ╭─[ assembly:8:32 ]
   │
 8 │     example:    .ascii hello world"
   │                              ───┬─┬  
   │                                 ╰──── While parsing this `identifier`
   │                                   │  
   │                                   ╰── Caused by this
───╯

Not executed
keyboard[0x0]:''; display[0x0]:''; 

